@@ -21,6 +21,7 @@ fixed bugs:
 - fixed potential performance issue with tree depth always assumed to be zero when propagating in probing mode
 - fixed memory leak in lp.c (probably never occurred so far since array was not used)
 - fixed bug in reader_gms.c w.r.t. writing nonlinear expressions with polynomials with constants
+- fixed bug in sepa_zerohalf.c not copying the displays to the subscip, but still changing a display parameter there
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
